--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('junit:junit:4.12')
+	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
 }
