--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-rps'
 include 'kodilla-exeption'
+include 'kodilla-good-patterns'
 
