--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kodilla-stream'
 include 'kodilla-rps'
 include 'kodilla-exeption'
 include 'kodilla-good-patterns'
+include 'kodilla-spring-intro'
 
