--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include 'kodilla-rps'
 include 'kodilla-exeption'
 include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
+include 'kodilla-patterns'
+include 'kodilla-patterns'
 
