--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ include 'kodilla-sudoku'
 include 'kodilla-sudoku2'
 include 'kodill-sudoku-3'
 include 'kodilla-sudoku3'
+include 'Exercise-Exception'
 
